scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics1.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,1): error TS8002: 'import ... =' can only be used in TypeScript files.


==== /a.js (1 errors) ====
    import a = b;
    ~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.